force-app/main/default/objects/Calculator_Rule__c/Calculator_Rule__c.object-meta.xml
<CustomObject>
    <label>Calculator Rule</label>
    <nameField>
        <label>Calculator Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculator Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>