force-app/main/default/objects/Calculator_Rule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remove Product</fullName>
            </value>
            <value>
                <fullName>Disable Product</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Disable Quantity</fullName>
            </value>
            <value>
                <fullName>Default Product</fullName>
            </value>
            <value>
                <fullName>Flat Price Override</fullName>
            </value>
            <value>
                <fullName>Environment Whitelist</fullName>
            </value>
            <value>
                <fullName>Remove Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>