force-app/main/default/objects/Calculator_Rule__c/fields/Calculator_Offer__c.field-meta.xml
<CustomField>
    <fullName>Calculator_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculator Offer</label>
    <referenceTo>Calculator_Offer__c</referenceTo>
    <relationshipLabel>Calculator Rules</relationshipLabel>
    <relationshipName>Calculator_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>