force-app/main/default/objects/Calculator_Rule__c/fields/Criteria_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Field_2__c</fullName>
    <label>Criteria Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>