force-app/main/default/objects/Calculator_Rule__c/fields/Criteria_Object__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Object__c</fullName>
    <label>Criteria Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>