force-app/main/default/objects/Calculator_Rule__c/fields/Field_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_1_Value__c</fullName>
    <inlineHelpText>If you want to include multiple value separate by a comma</inlineHelpText>
    <label>Field 1 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>