force-app/main/default/objects/Calculator_Rule__c/fields/Field_2_Operator__c.field-meta.xml
<CustomField>
    <fullName>Field_2_Operator__c</fullName>
    <label>Field 2 Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal String</fullName>
            </value>
            <value>
                <fullName>Equal Checkbox</fullName>
            </value>
            <value>
                <fullName>Not Equal String</fullName>
            </value>
            <value>
                <fullName>Not Equal Checkbox</fullName>
            </value>
            <value>
                <fullName>Contains String</fullName>
            </value>
            <value>
                <fullName>Does Not Contain String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>