force-app/main/default/objects/Calculator_Rule__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message to display when rule is enforced</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>