force-app/main/default/objects/Calculator_Rule__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Calculator Rules</relationshipLabel>
    <relationshipName>Calculator_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>