force-app/main/default/objects/Calculator_Rule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Calculator Rules</relationshipLabel>
    <relationshipName>Calculator_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>