force-app/main/default/objects/Calculator_Rule__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Action__c</columns>
    <columns>Product__c</columns>
    <columns>Criteria_Object__c</columns>
    <columns>Criteria_Field_1__c</columns>
    <columns>Field_1_Operator__c</columns>
    <columns>Field_1_Value__c</columns>
    <columns>Criteria_Field_2__c</columns>
    <columns>Field_2_Operator__c</columns>
    <columns>Field_2_Value__c</columns>
    <columns>Environment__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>