force-app/main/default/objects/Calculator_Rule__c/listViews/Paid_Digital.listView-meta.xml
<ListView>
    <fullName>Paid_Digital</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Action__c</columns>
    <columns>Product__c</columns>
    <columns>Criteria_Object__c</columns>
    <columns>Criteria_Field_1__c</columns>
    <columns>Field_1_Operator__c</columns>
    <columns>Field_1_Value__c</columns>
    <columns>Criteria_Field_2__c</columns>
    <columns>Field_2_Operator__c</columns>
    <columns>Field_2_Value__c</columns>
    <columns>Environment__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_1_Value__c</field>
        <operation>contains</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Field_2_Value__c</field>
        <operation>contains</operation>
        <value>Paid</value>
    </filters>
    <label>Paid Digital</label>
</ListView>